fix(breadcrumb): adjust margin for better alignment in trending view
Reduce the right margin of the breadcrumb navigation element when within the context
of the "trending" view to ensure proper alignment with adjacent elements. This change
helps maintain a consistent and visually appealing layout.

--- a/style/features/colorful-asri.scss
+++ b/style/features/colorful-asri.scss
@@ -360,6 +360,14 @@
         }
     }
 
+    [data-type="wnd"]:not(.layout__wnd--active) .item--focus {
+        background-color: oklch(from var(--b3-theme-primary) .73 clamp(0, calc(.06 * var(--asri-c-factor, 1) * var(--asri-c-0, 1) * .5) , .2) h / .4);
+
+        @include darkmode-counterpart {
+            background-color: oklch(from var(--b3-theme-primary) .99 clamp(0, calc(.1 * var(--asri-c-factor, 1) * var(--asri-c-0, 1) * .5), .2) h / .21);
+        }
+    }
+
     .b3-dialog__scrim {
         background-color: oklch(from var(--b3-theme-background) .6 c h / .5);
 
