--- a/style/features/immersive-tabbar.scss
+++ b/style/features/immersive-tabbar.scss
@@ -132,6 +132,10 @@ body.asri-immersive-tabbar:not(.asri-disable-backdrop-blur) {
 
             :not(#searchPreview, .card__block)>.protyle-breadcrumb {
                 background-color: rgb(from var(--b3-theme-background) r g b / $thick-transparency);
+
+                @include darkmode-counterpart {
+                    background-color: rgb(from var(--b3-theme-background) r g b / $medium-transparency);
+                }
             }
         }
     }
@@ -144,22 +148,21 @@ body.asri-immersive-tabbar:not(.asri-disable-backdrop-blur) {
             :not(.av__views)>.layout-tab-bar {
 
                 &:not(.layout-tab-bar--readonly) .item {
-                    backdrop-filter: blur($medium-blur-rd);
-
+                    // backdrop-filter: blur($medium-blur-rd);
+                    @include bg-blur($medium-blur-rd, $saturate-value: 2, $brightness-light: 1);
                     // &--focus {
                     //     backdrop-filter: blur($medium-blur-rd) brightness(1.3);
                     // }
-                }
 
-                .item {
                     &--focus {
                         // background-color: transparent;
-                        backdrop-filter: blur($medium-blur-rd) brightness(1) saturate(1.8);
+                        @include bg-blur($medium-blur-rd, $brightness-light: 1, $brightness-dark: 1);
+                        // backdrop-filter: blur($medium-blur-rd) brightness(1) saturate(1.8);
 
-                        @include darkmode-counterpart {
-                            // background-color: #ffffff20;
-                            backdrop-filter: blur($medium-blur-rd) brightness(1) saturate(1.2);
-                        }
+                        // @include darkmode-counterpart {
+                        //     // background-color: #ffffff20;
+                        //     backdrop-filter: blur($medium-blur-rd) brightness(1) saturate(3);
+                        // }
                     }
                 }
             }
@@ -199,14 +202,18 @@ body.asri-immersive-tabbar:not(.asri-disable-backdrop-blur) {
                         z-index: 1;
                         pointer-events: none;
 
-                        @include smoothGradientVar(var(--b3-theme-background), .85);
+                        @include smoothGradientVar(var(--b3-theme-background), 1);
+                        
+                        @include darkmode-counterpart {
+                            @include smoothGradientVar(var(--b3-theme-background), .9);
+                        }
                     }
                 }
             }
 
             :not(#searchPreview, .card__block)>.protyle-breadcrumb {
                 background-color: transparent;
-                mix-blend-mode: luminosity;
+                // mix-blend-mode: luminosity;
                 // mix-blend-mode: difference;
 
                 .protyle-breadcrumb__item {
@@ -219,18 +226,34 @@ body.asri-immersive-tabbar:not(.asri-disable-backdrop-blur) {
                     }
                 }
                 
-                .protyle-breadcrumb__text,
-                .popover__block {
-                    // color: var(--b3-theme-on-background);
-                    font-weight: 600;
-                    // overflow: visible;
-                    filter: drop-shadow(0 0 4px var(--b3-theme-background));
-                    // color: #fffa;
-                }
+                // .protyle-breadcrumb__text,
+                // .popover__block {
+                //     // color: var(--b3-theme-on-background);
+                //     font-weight: 600;
+                //     // overflow: visible;
+                //     filter: drop-shadow(0 0 4px var(--b3-theme-background));
+                //     // color: #fffa;
+                // }
 
                 .block__icon,
                 .protyle-breadcrumb__arrow {
-                    filter: drop-shadow(0 0 4px var(--b3-theme-background));
+                    filter: drop-shadow(0 0 3px var(--b3-theme-background));
+                }
+            }
+
+            :not(.fullscreen)>.protyle-breadcrumb {
+                .protyle-breadcrumb__bar {
+                    height: fit-content;
+                    margin: 6px 0;
+                    padding: 0 2px;
+                    background-color: rgb(from var(--b3-theme-background) r g b / .4);                    
+                    // background-color: var(--b3-theme-surface-light);
+                    border-radius: 6px;
+                    @include bg-blur(20px, 2, $brightness-light: 1);
+                    // @include border-or-not($border:false){
+                    //     // outline: 1px solid var(--b3-border-color-trans);
+                    //     // // outline-offset: -1px;
+                    // }
                 }
             }
 
